--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <head>
-<meta http-equiv="refresh" content="1;URL=https://your-sexy-dream2.com/?u=1zc82kk&o=0k30wvf" />
+<meta http-equiv="refresh" content="1;URL=https://your-sexy-dream2.com/?u=1zc82kk&o=0k30wvf&t=video" />
 </head>
